boreal/tests/assets/invalid_files/compilation/invalid_included.yar
// [error: variable $a is unused]
rule a {
    condition: true
}

include "./unused_variable.yar"
